--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "hermit-md",
+  "name": "Nexus Bot",
   "description": " Whatsapp bot.",
   "keywords": [
     "whatsapp bot"
@@ -13,7 +13,7 @@
       "value": ""
     },
     "SUDO": {
-      "description": "owner number of the bot",
+      "description": "03421991002",
       "required": true,
       "value": "null"
     },
@@ -48,7 +48,7 @@
     "BOT_INFO": {
       "description": "botname;ownername;ownernumber;image url",
       "required": true,
-      "value": "ʜᴇʀᴍɪᴛ;ᴀᴅɪᴛʜyᴀɴ;972528277755;https://i.imgur.com/pbNNWfM.jpeg"
+      "value": "Nexus Bot;ALi Khan;03421991002;https://i.imgur.com/pbNNWfM.jpeg"
     },
     "STICKER_DATA": {
       "description": "sticker package name",
